[package]
name = "unit-conversions"
authors = ["Clayman"]
version = "0.1.0"
description = "A CLI application to convert between various units"
edition = "2021"

[[bin]]
name = "unit-convert"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2.5", features = ["derive"] }

[dev-dependencies]
approx = "0.5.1"
